--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,13 @@
     --logo-color:#000000;
     --text-color:#212121;
     --dddd-color: #000000a1;
+    --textp-color-: #757575;
+    --bebrount-color-: #F5F4FA;
+    --ttext-color-: #FFF;
+}
+
+.link {
+    color: var(--textp-color-);
 }
 
 head {
@@ -17,12 +24,13 @@ head {
     font-style: 'Roboto';
     font-family: 'inter';
     max-width: 1600px;
+    background-color: var(--bebrount-color-);
 }
 
-.meian, .fot {
+/* .meian, .fot {
     margin-left: 215px;
     margin-right: 215px;
-}
+} */
 
 .work {
     margin-left: 215px;
@@ -36,6 +44,9 @@ head {
 
 .lolokrya
 {
+    width: 1600px;
+    height: 600px;
+    flex-shrink: 0;
     width: 1600px; 
     height: 600px; 
     background-color: #2F303A;
@@ -46,7 +57,7 @@ head {
 .lolo-h1  {
     color: rgb(255, 255, 255);
     font-family: "Roboto";
-    padding: 200px 452px 280px 452px ;
+    padding: 100px 200px  ;
 }
 
 #nya {
@@ -57,10 +68,13 @@ head {
     border-radius: 5px;
     font-size: 16px;
     cursor: pointer;
+    margin-left: 692px;
+    font-style: "Roboto";
+    /* margin: 350px 692px 200px 692px; */
 }
 
 #nya:hover {
-    background-color: #2195f34e; /* Более тёмный синий при наведении */
+    background-color: #2195f34e;
 }
 
 .folout {
@@ -81,20 +95,68 @@ head {
 .possibilities-ul {
     display: flex;
     justify-content: center;
+    margin-top: 94px;
 }
 
 .possibilities-p {
-    font-family: Roboto;
-font-size: 14px;
-font-weight: 400;
-line-height: 24px;
-letter-spacing: 0.03em;
-text-align: left;
-text-underline-position: from-font;
-text-decoration-skip-ink: none;
+    color: var(--textp-color-);
 }
 
+.possibilities-p:nth-child(1) {
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.03em;
+    text-align: left;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    width: 270px;
+    margin-right: 30px;
+}
+
+.possibilities-p:nth-child(2) {
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.03em;
+    text-align: left;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    width: 270px;
+    margin-right: 30px;
+}
+
+.possibilities-p:nth-child(3) {
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.03em;
+    text-align: left;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    width: 270px;
+    margin-right: 30px;
+}
+
+.possibilities-p:last-child {
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.03em;
+    text-align: left;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    width: 270px;
+}
+
+
 .work-h2 {
+    margin-top: 94px;
+    margin-bottom: 50px;
     font-family: Roboto;
     font-size: 36px;
     font-weight: 700;
@@ -108,26 +170,40 @@ text-decoration-skip-ink: none;
 .work-list {
     display: flex;
     justify-content: center;
+    gap: 30px;
 }
 
 .work-pic {
-    width:  370;
-    height: 294;
+    width: 370px;
+    height: 294px;
+}
+
+.comandblock-h2 {
+    margin-top: 188px;
+    margin-bottom: 50px;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: 1.08px;
 }
 
 .comandblock {
     font-family: Roboto;
-font-size: 36px;
-font-weight: 700;
-line-height: 42.19px;
-letter-spacing: 0.03em;
-text-align: center;
-text-underline-position: from-font;
-text-decoration-skip-ink: none;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 42.19px;
+    letter-spacing: 0.03em;
+    text-align: center;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
 }
 
 .comandblock-ul {
     display: flex;
+    justify-content: center;
     gap: 30px;
 }
 
@@ -140,7 +216,8 @@ text-decoration-skip-ink: none;
     text-align: center;
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
-
+    border-radius: 0px 0px 4px 4px;
+    background: #FFF;
 }
 
 .comandblock-ul-p {
@@ -155,6 +232,7 @@ text-decoration-skip-ink: none;
 }
 
 .logo {
+    margin-left: auto;
     font-family: Raleway;
     font-size: 26px;
     font-weight: 700;
@@ -171,7 +249,13 @@ text-decoration-skip-ink: none;
     color: #007BFF;
 }
 
+.fot {
+    background: #2F303A;
+}
+
 .foot-logo {
+    margin-top: 60px;
+    margin-left: 215px;
     font-family: Raleway;
     font-size: 26px;
     font-weight: 700;
@@ -181,6 +265,43 @@ text-decoration-skip-ink: none;
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
     color: var(--logo-color);
+}
+
+.foot-ul-li-a {
+    margin-top: 20px;
+    margin-left: 215px;
+    color: var(--ttext-color-);
+    font-family: Roboto;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.42px;
+    margin-bottom: 9px;
+}
+
+.foot-ul-li-aa {
+    color: rgba(255, 255, 255, 0.60);
+    font-family: Roboto;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 171.429% */
+    letter-spacing: 0.42px;
+    margin-bottom: 9px;
+    margin-left: 215px;
+}
+
+.foot-ul-li-aa:last-child {
+    color: rgba(255, 255, 255, 0.60);
+    font-family: Roboto;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 171.429% */
+    letter-spacing: 0.42px;
+    margin-bottom: 60px;
+    margin-left: 215px;
 }
 
 .foot-logo:before {  
@@ -194,13 +315,13 @@ text-decoration-skip-ink: none;
 
 .port-h2 {
     font-family: Roboto;
-font-size: 18px;
-font-weight: 700;
-line-height: 36px;
-letter-spacing: 0.06em;
-text-align: left;
-text-underline-position: from-font;
-text-decoration-skip-ink: none;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 36px;
+    letter-spacing: 0.06em;
+    text-align: left;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
 }
 
 .buut-ver {
