--- a/css/style.css
+++ b/css/style.css
@@ -102,9 +102,8 @@ img {
     padding-top: 200px;
     padding-bottom: 200px;
     display: flex;
-    background-color: var(--buisness-color-);
-    gap:50px ;
-    
+    gap: 50px;
+    background-image:linear-gradient(rgba(47, 48, 58, 0.40), rgba(47, 48, 58, 0.40)), url(../images.krakva/buisness.webp);
 }
 
 .buisness-title  {
@@ -136,7 +135,7 @@ margin-right:auto;
 }
 
 .buisness-button:hover {
-    background-color: #2195f37b;
+    background-color: #0f416a;
 }
 
 .logo {
@@ -174,6 +173,7 @@ margin-right:auto;
     color: var(--ttext-color-);
     display: inline-block;
     padding-bottom: 20px;
+    margin-top: 60px;
 }
 
 .foot-ul-li-a {
@@ -234,13 +234,12 @@ margin-right:auto;
     color: var(--textp-color-);
     font-size: 14px;
     font-weight: 400;
-    -height: 1.71; 
+    height: 1.71; 
     letter-spacing: 0.42px;
     width: 270px;
     margin-right: 10px;
 }
 .alarm-subtle{
-    /* color:var(--); */
     font-size: 14px;
     font-weight: 700;
     line-height: 1.14;
@@ -252,6 +251,41 @@ margin-right:auto;
     display: flex;
     gap: 30px;
 }
+
+.alarm-item::before {
+    content: "";
+    width: 270px;
+    height: 120px;
+    border-radius: 4px;
+    background-color: var(--partybeb-color-);
+    display: block;
+    margin-bottom: 30px;
+}
+
+.alarm-item:nth-child(1)::before {
+    background-image: url(../images.krakva/spytnic.webp);
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.alarm-item:nth-child(2)::before {
+    background-image: url(../images.krakva/chas.webp);
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.alarm-item:nth-child(3)::before {
+    background-image: url(../images.krakva/pc.webp);
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.alarm-item:nth-child(4)::before {
+    background-image: url(../images.krakva/cosmo.webp);
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
 /* ================ work, work, work!!! ======================== */
 .work-title{
     color: var(--text-color);
@@ -324,10 +358,14 @@ letter-spacing: 0.48px;
 
 }
 .team-ul{
-    display: flex;
-    background-color: var(--buisness-color-);
+    display: flex; 
     text-align: center;
     gap: 30px;
+}
+
+.team-item {
+    border-radius: 0px 0px 4px 4px;
+box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px 0px rgba(0, 0, 0, 0.20);
 }
 
 /* =====================1-2?========================= */
@@ -371,6 +409,12 @@ letter-spacing: 0.48px;
 
 .buttons-item {
     box-sizing: calc((100% - 60px) / 3);
+}
+
+.buttons-item:hover {
+    outline: 1px solid #EEE;
+    background: #FFF;
+    box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.12), 0px 4px 4px 0px rgba(0, 0, 0, 0.06), 1px 4px 6px 0px rgba(0, 0, 0, 0.16);
 }
 
 .buttons-button:hover {
